--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "imagemagick": "^0.1.3",
+    "jimp": "^0.6.4",
     "mongoose": "^5.6.10",
     "multer": "^1.4.2",
     "nodemon": "^1.19.1"
