--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^5.6.10",
     "multer": "^1.4.2",
     "nodemon": "^1.19.1",
-    "onecolor": "^3.1.0"
+    "onecolor": "^3.1.0",
+    "paypal-rest-sdk": "^1.8.1"
   }
 }
